Update (still only partly implemented) - DynamicTask added